--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -34,3 +34,11 @@ body, html{ height:102%; }
 .rate_max { padding-left: 3px; }
 
 .required {color: red}
+
+
+.layer {display:block;position:absolute;width:800px;height:520px;z-index:999;box-shadow:10px 10px 50px;top:40%;left:50%}
+.modal-mask {position: fixed;z-index: 9998;top: 0;left: 0;width: 100%;height: 100%;background-color: rgba(0, 0, 0, .5);display: table;transition: opacity .3s ease;}
+#modal .modal-items {overflow-y: auto; overflow-x:hidden; max-height:400px;min-height:400px}
+
+.setting-layout {margin-top: 41px}
+.setting-layout input:read-only { background-color: #fff;}
