--- a/Views/Shared/EditLayout/_Layout.cshtml
+++ b/Views/Shared/EditLayout/_Layout.cshtml
@@ -2,38 +2,24 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - UBSurvey</title>
-
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/edit.css" />
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>        
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/lib/underscore/underscore.js"></script>
-    </environment>
-    <environment include="Production">
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="~/lib/underscore/underscore.min.js"></script>
-    </environment>
-    
+<environment include="Development">
+    <script src="~/lib/jquery/dist/jquery.js"></script>        
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/lib/underscore/underscore.js"></script>
+</environment>
+<environment include="Production">
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/lib/underscore/underscore.min.js"></script>
+</environment>
     @RenderSection("Scripts", required: false)
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">설문</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-        </ul>
-      </div>
-    </div>
-  </nav>
-  
-
     @RenderBody()
 </body>
 </html>
