--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -1,5 +1,7 @@
 body, html{ height:102%; }
 /*  navbar */
+
+.logo-container {margin-top:-10px;}
 .navbar { margin-bottom: 0px;}
 .sidenav { margin-top: 10px;}
 
@@ -13,7 +15,9 @@ body, html{ height:102%; }
 .tab {float: left; }
 .tab fieldset {border:1px solid white; padding:20px; margin-bottom:10px; background-color: #eee; height: 100%}
 .tab fieldset.setting {border:1px solid #87B2F1;}
-.tab fieldset .question { font-size: 1.2em; font-weight: bold; padding-bottom: 5px;}
+.tab fieldset .question { font-size: 1.2em; font-weight: bold; padding-left:2px}
+.tab fieldset .desc { border: 1px solid #c1c1c1; margin:0px 5px 10px; padding: 10px; }
+.tab fieldset .required {color: red; vertical-align:text-top}
 .tab .labelfor {background: #eee; padding: 9px; border: 1px solid #ccc; margin-left: 0; position: relative;left: 1px; top: -40px;-webkit-transition: background-color .17s linear;}
 .tab .labelfor span.sel { color:#87B2F1 }
 .tab .labelfor span {color: #C1C1C1}
@@ -21,7 +25,7 @@ body, html{ height:102%; }
 .tab label.setting {border:1px solid #87B2F1; background: white;color:#87B2F1;}
 .tabgroup {display: none;}
 
-.tab-container {height:92vh;position: absolute;top:-1px;width:100%;right:0;padding:20px;border: 1px solid #ccc; overflow-y:scroll;display:none;} 
+.tab-container {height:90vh;position: absolute;top:-1px;width:100%;right:0;padding:20px;border: 1px solid #ccc; overflow-y:scroll;display:none;} 
 .tab [type=radio]:checked ~ .labelfor {background: white;border-bottom: 1px solid white;z-index: 2;}
 .tab [type=radio]:checked ~ .labelfor ~ .tab-container {z-index: 1;display:block;} 
 
@@ -33,12 +37,13 @@ body, html{ height:102%; }
 .rate_min { padding-right: 3px; }
 .rate_max { padding-left: 3px; }
 
-.required {color: red}
 
-
-.layer {display:block;position:absolute;width:800px;height:520px;z-index:999;box-shadow:10px 10px 50px;top:40%;left:50%}
+.layer {display:block;position:absolute;width:800px;height:560px;z-index:999;box-shadow:10px 10px 50px;top:40%;left:50%}
 .modal-mask {position: fixed;z-index: 9998;top: 0;left: 0;width: 100%;height: 100%;background-color: rgba(0, 0, 0, .5);display: table;transition: opacity .3s ease;}
-#modal .modal-items {overflow-y: auto; overflow-x:hidden; max-height:400px;min-height:400px}
+#modal .modal-items {overflow-y: auto; overflow-x:hidden; max-height:400px;min-height:400px;}
+#modal .header {padding: 15px;border-bottom: 1px solid #e5e5e5;}
 
+span.row { padding: 20px}
 .setting-layout {margin-top: 41px}
 .setting-layout input:read-only { background-color: #fff;}
+textarea {resize: none;}
