--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -47,3 +47,6 @@ span.row { padding: 20px}
 .setting-layout {margin-top: 41px}
 .setting-layout input:read-only { background-color: #fff;}
 textarea {resize: none;}
+
+.modal-items option {font-size : 20px}
+.setting-layout .delete { color: red }
