--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -25,6 +25,8 @@ body, html{ height:102%; }
 .tab label.setting {border:1px solid #87B2F1; background: white;color:#87B2F1;}
 .tabgroup {display: none;}
 
+
+
 .tab-container {height:90vh;position: absolute;top:-1px;width:100%;right:0;padding:20px;border: 1px solid #ccc; overflow-y:scroll;display:none;} 
 .tab [type=radio]:checked ~ .labelfor {background: white;border-bottom: 1px solid white;z-index: 2;}
 .tab [type=radio]:checked ~ .labelfor ~ .tab-container {z-index: 1;display:block;} 
@@ -45,7 +47,9 @@ body, html{ height:102%; }
 
 span.row { padding: 20px}
 .setting-layout {margin-top: 41px}
-.setting-layout input:read-only { background-color: #fff;}
+/*.setting-layout input:read-only { background-color: #fff;} */
+.setting-layout input[readonly] { background-color: #fff;}
+
 textarea {resize: none;}
 
 .modal-items option {font-size : 17px}
