mdoify view and surveyjson

--- a/wwwroot/css/Example/main2.css
+++ b/wwwroot/css/Example/main2.css
@@ -1,7 +1,7 @@
 
 .survey { }
 .survey .header { margin-left:7px;}
-.survey .header .title {font-weight: bold; font-size:3em;}
+.survey .header .title { font-size:3em;}
 
 
 .page-set {}
