--- a/wwwroot/css/Example/main2.css
+++ b/wwwroot/css/Example/main2.css
@@ -11,11 +11,17 @@
 .page .header { margin-left:7px;}
 .page .header .title {font-weight: bold; font-size:1.8em;}
 .page .header .description {font-size:1.2em;}
+.page button { background-color: #E7E7E7; border-radius: 2px; padding: 10px; font-size: 16px; cursor: pointer; text-decoration: none; }
+.page .btnNext {}
+.page .btnPre {}
+.page .btnComplete {}
+
 
 .questions {}
 .questions .question {border:1px solid white; padding:15px; margin-bottom:10px; background-color: #eee}
 
-
+.question .hide { display: none; }
+.question .show { display: inline; }
 /* Question header */
 .question .header {font-weight: bold; padding-bottom: 5px;}
 .question .header .title { font-size: 1.3em; font-weight: bold; margin-bottom:0px;}
@@ -29,7 +35,7 @@
 .question .items .text_set {}
 .question .items .text_set .i_text {}
 
-/* Multi Text Box */
+/* Comment Text Box */
 .question .items .comment_set {}
 .question .items .comment_set .i_comment { resize: none; }
 
@@ -64,7 +70,10 @@
 .question .items .rate_set [type=radio]:hover + label{ color: #333;background-color: #e6e6e6;border-color: #adadad; }
 .question .items .rate_set .lbl_rate { min-width: 5em; background-color: #FFFFFF; border: 1px solid #ccc; cursor: pointer; text-align: center;}
 
-
+/* Multi Text Box */
+.question .items .multiText_set { }
+.question .items .multiText_set .lbl_multiText { margin-right:3px; }
+.question .items .multiText_set .i_multiText { }
 
 
 
