--- a/wwwroot/css/Example/main2.css
+++ b/wwwroot/css/Example/main2.css
@@ -26,8 +26,7 @@
 .question .header {font-weight: bold; padding-bottom: 5px;}
 .question .header .title { font-size: 1.3em; font-weight: bold; margin-bottom:0px;}
 .question .header .title strong { color: #FE0000; padding-right:2px;}
-.question .header .description { padding:4px;  font-size: 0.9em; margin-left: 10px;}
-.question .header .description .line {border:1px solid #C3C3C3;}
+.question .header .description { padding:4px;  font-size: 0.9em; margin-left: 10px; border:1px solid #C3C3C3;}
 
 
 /* Question itmes */
