텍스트 박스 디자인 통일

--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -58,3 +58,4 @@ textarea {resize: none;}
 .setting-layout .delete { color: red }
 
 .cur { cursor: pointer }
+.non-width { width:auto; display:inline; }
