--- a/Views/Edit/Index.cshtml
+++ b/Views/Edit/Index.cshtml
@@ -5,9 +5,11 @@
 @section Scripts {
 <environment include="Development">
     <script src="~/js/vue.min.js"></script>
+    <script src="~/js/Sortable.js"></script>
 </environment>
 <environment include="Production">    
     <script src="~/js/vue.min.js"></script>
+    <script src="~/js/Sortable.min.js"></script>
 </environment>
 <script src="~/js/edit/Variables.js"></script>
 <script src="~/js/edit/vue-component-control.js"></script>
