--- a/Views/Edit/Index.cshtml
+++ b/Views/Edit/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model UBSurvey.Models.SurveyParams
+@{
     ViewData["Title"] = "M Index";
     Layout = "~/Views/Shared/EditLayout/_Layout.cshtml";
 }
@@ -14,6 +15,7 @@
 <script src="~/js/edit/Variables.js"></script>
 <script src="~/js/edit/vue-component-control.js"></script>
 <script src="~/js/edit/vue-component-settinglayer.js"></script>
+<script>var p = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(this.Model)); </script>
 }
 
 <div id="container">
