--- a/Views/Shared/EditLayout/_Layout.cshtml
+++ b/Views/Shared/EditLayout/_Layout.cshtml
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
+    <meta HTTP-EQUIV="Expires" CONTENT="-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - UBSurvey</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
